--- a/.github/workflows/get_branch.yaml
+++ b/.github/workflows/get_branch.yaml
@@ -19,13 +19,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "::set-output name=branch-name::$(curl -H "Authorization: token ${GITHUB_TOKEN}" ${{ github.event.issue.pull_request.url }} | jq '.head.ref' | sed 's/\"//g')" && \
           echo "::set-output name=git-hash::$(curl -H "Authorization: token ${GITHUB_TOKEN}" ${{ github.event.issue.pull_request.url }} | jq '.head.sha' | sed 's/\"//g')"
 
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: ${{ steps.get-upstream-branch.outputs.branch-name }}
+          ref: ${{ steps.get-upstream-branch.outputs.git-hash }}
 
       - name: Comment by action
         uses: actions/github-script@v5
