--- a/.github/workflows/get_branch.yaml
+++ b/.github/workflows/get_branch.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            const pr = github.rest.pulls.get({
+            let {data: pr} = await github.rest.pulls.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.issue.number
